--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>  
-<html>  
+<html>
   <head>
-    <title>Webpack example</title>
+    <meta charset="utf-8" />
+    <title>Pomodoro</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.5/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.5/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   </head>
   <body>
-    <div id="content"></div>
+  	<script type="text/babel" src="example.js"></script>
   </body>
-</html>  
+</html>
