--- a/client/login.html
+++ b/client/login.html
@@ -1,18 +1,28 @@
 <html>
+<head>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+</head>
 <body>
-    <form action="/login" method="post">
-    <div>
-        <label>Username:</label>
-        <input type="text" name="username" />
-        <br/>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-4 col-xs-offset-4">
+                <form action="/login" method="post" class="form-signin">
+                    <h2 class="form-signin-heading">Please sign in</h2>
+                    <label for="username" class="sr-only">Username</label>
+                    <input name="username" type="text" id="username" class="form-control" placeholder="Username" required autofocus />
+                    <label for="password" class="sr-only">Password</label>
+                    <input name="password" type="password" id="password" class="form-control" placeholder="Password" required />
+                    <br />
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                </form>
+            </div>
+        </div>
     </div>
-    <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
-    </div>
-    <div>
-        <input type="submit" value="Submit" />
-    </div>
-    </form>
 </body>
 </html>
+
+
+
